Streamline method names

--- a/examples/browser/audiobridge.html
+++ b/examples/browser/audiobridge.html
@@ -36,7 +36,7 @@
               return plugin.joinRoom(1234);
             })
             .then(function() {
-              return plugin.startStreaming();
+              return plugin.startOffer();
             });
         })
         .catch(function(error) {
