Add vendor to examples

--- a/examples/browser/audiobridge.html
+++ b/examples/browser/audiobridge.html
@@ -7,6 +7,7 @@
   <body>
     <audio id="audio" autoplay></audio>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../../dist/vendor.js"></script>
     <script src="../../dist/janus.js"></script>
     <script>
       jQuery.getJSON('./config.json').then(function(config) {
