--- a/examples/browser/streaming.html
+++ b/examples/browser/streaming.html
@@ -14,6 +14,7 @@
   <body>
     <video id="video" autoplay></video>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../../dist/vendor.js"></script>
     <script src="../../dist/janus.js"></script>
     <script>
       jQuery.getJSON('./config.json').then(function(config) {
