--- a/examples/browser/streaming.html
+++ b/examples/browser/streaming.html
@@ -49,7 +49,7 @@
               })
               .then(function(list) {
                 console.log('Current streams', list);
-                return plugin.connect(list[1].id);
+                return plugin.connect(4);
               })
               .then(function() {
                 return plugin.pause();
