Janus basic integration tests

--- a/test/integration/index.html
+++ b/test/integration/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div id="mocha"></div>
+    <script src="janus.js"></script>
     <script src="audioroom.js"></script>
 
     <script>
