Audiobridge integration tests

--- a/test/integration/index.html
+++ b/test/integration/index.html
@@ -18,6 +18,7 @@
     <div id="mocha"></div>
     <script src="janus.js"></script>
     <script src="audioroom.js"></script>
+    <script src="audiobridge.js"></script>
     <script src="rtpbroadcast.js"></script>
 
     <script>
